# multi-human-robot-interaction

./: README.md
Interaction/ur_move_new/: CMakeLists.txt  package.xml
Interaction/ur_move_new/include/ur_move_new/: action_follow.h  collsion_avoidance.h  common.h  detect.h  grapper.h  gripper.h
Interaction/ur_move_new/launch/: human_robot_interaction.launch
Interaction/ur_move_new/src/: action_follow.cpp  collaborative_goals.cpp  collsion_avoidance.cpp  detect.cpp  generate_goals.cpp  grapper.cpp  gripper.cpp  main.cpp
Interaction/ur_move_script/: CMakeLists.txt  package.xml
Interaction/ur_move_script/include/ur_move_script/: commanBase.h  common.h  gripper.h  manipulator.h  ur_base_move.h
Interaction/ur_move_script/launch/: sin.launch
Interaction/ur_move_script/scripts/: draw_traj.py  ur1.py
Interaction/ur_move_script/src/: avoidence.cpp  commanBase.cpp  follow_hand.cpp  generate_goal.cpp  gripper.cpp  main.cpp  manipulator.cpp  obs(mpc).cpp  obstacle_avoidance.cpp  pub_obs.cpp  sin.cpp  ur_base_move.cpp  ur_move.cpp  ur_move_PD.cpp
camera_wrapper/: CMakeLists.txt  package.xml
camera_wrapper/calibration_data/: solution_20180814
camera_wrapper/calibration_data/003415165047/: calib_color.yaml  calib_depth.yaml  calib_pose.yaml.old
camera_wrapper/cmake/: FindOpenCL.cmake  OpenCVConfig.cmake
camera_wrapper/include/: depth_registration.h
camera_wrapper/launch/: human.launch  kinect1_listener.launch  kinect2_listener.launch
camera_wrapper/src/: multi_view.cpp  multi_view_tracker.cpp  tracker.cpp
human_pose_msgs/: CMakeLists.txt  package.xml
human_pose_msgs/msg/: Human.msg  HumanList.msg  PointWithProb.msg
multi_human_3d_pose_estimation/: body3DScene_00004076.json  demo.py  readMe.md  setup.py
multi_human_3d_pose_estimation/action/: action.pkl  action_enum.py  action_recognition.h5  data_processing.py  data_under_scene.csv  dataset.csv  recognition.h5  recognizer.py  train.py  train_data.csv
multi_human_3d_pose_estimation/cvpack/torch_modeling/engine/: checkpoint.py  engine.py
multi_human_3d_pose_estimation/cvpack/utils/: pyt_utils.py
multi_human_3d_pose_estimation/data/: extrinsics.json  handing.txt  my_camera_1_intrinsics.json  my_camera_2_intrinsics.json  my_camera_extrinsics.json  operate.txt  sit.txt  skeletons.csv  stand.txt  t_pose.txt  t_test.txt
multi_human_3d_pose_estimation/datasets/: get_logger.py  load_dataset.py
multi_human_3d_pose_estimation/exps/ROMP/: train.py
multi_human_3d_pose_estimation/exps/val/: config.py  test.py
multi_human_3d_pose_estimation/launch/: human_estimate.launch
multi_human_3d_pose_estimation/lib/utils/: solver.py
multi_human_3d_pose_estimation/models/: with_mobilenet.py
multi_human_3d_pose_estimation/models/__pycache__/: refineNet.py
multi_human_3d_pose_estimation/modules/: InferenceEngine.py  camera.py  conv.py  extractor_pose.py  input_reader.py  kalmanFilter.py  one_euro_filter.py  pose.py  show.py  slow_extractor.py  transformation.py
multi_human_3d_pose_estimation/modules/runs/Jun16_13-30-59_Agentnet/: events.out.tfevents.1623821459.Agent
multi_human_3d_pose_estimation/pose_extractor/: CMakeLists.txt  wrapper.cpp
multi_human_3d_pose_estimation/pose_extractor/src/: extract_poses.hpp  human_pose.hpp  peak.hpp
multi_human_3d_pose_estimation/scripts/: draw_joint_traj.py  load_imgs.py  load_skeletons.py  show_heatmap.py  show_skele.py  test_thread.py  txt2csv.py
open_ros_codegen/data/: end.txt  guiji(copy).txt  state.txt  time.txt
open_ros_codegen/data/nmpc_open/: open_solver.py  open_solver_copy.py
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/: Cargo.toml  mpc_controller_bindings.h  mpc_controller_bindings.hpp  optimizer.yml
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/icasadi_mpc_controller/src/: lib.rs
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/src/: lib.rs
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/ur5_nmpc_controller/: CMakeLists.txt  README.md  package.xml
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/ur5_nmpc_controller/config/: open_params.yaml
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/ur5_nmpc_controller/include/: open_optimizer.hpp
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/ur5_nmpc_controller/launch/: open_optimizer.launch
open_ros_codegen/data/nmpc_open/optimizate_engine/mpc_controller/ur5_nmpc_controller/src/: open_optimizer.cpp
skeleton_tracking/: CMakeLists.txt  package.xml
skeleton_tracking/calibration_data/003415165047/: calib_ir.yaml
skeleton_tracking/include/human_pose/: pose.h  skeletonPair.h  track.h  visualizate.h
skeleton_tracking/rviz/: hri.rviz
skeleton_tracking/src/: multi_person.cpp  pose.cpp  track.cpp  triangulation.cpp  visualizate.cpp
